designchallenge.css
.image-splash {
    width: 100%;
    height: 100%;
}
@keyframes vertical-float {
    0% {
        top: -10px;
    }
    50% {
        top: 0px;
    }
    100% {
        top: -10px
    }
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    50% {
        transform: rotate(180deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

#nav {
    padding: 0;
    padding-top: 0;
}

#hamburger-btn {
    margin: 0.5em;
    margin-top: 0em;
}

.nav-logo {
    height: 70%;
    position: absolute;
    right: 0.5em;
    top: 15%;
}

.floating-down-arrow {
    --size: 10px;
    border: 2px solid white;
    border-top: none;
    border-right: none;
    width: var(--size);
    height: var(--size);
    color: rgba(0,0,0,0);
    margin: 0 auto;
    transform: rotate(-45deg);
    position: relative;
    animation-name: vertical-float;
    animation-delay: 1.5s;
    animation-duration: 1.5s;
    animation-iteration-count: infinite;
}
.centered-title {
    height: calc(100% - 40px);
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
}
.centered-title .logo-hero {
    width: 40%;
    margin: 0 auto;
    margin-left: 30%;
    margin-right: 30%;
}
.centered-title h3 {
    margin: 0;
    text-align: center;
}
.content-pane-1 {
    /*background-color: rgba(0,0,0,0.8);*/
    background-image: url(car_bg_darkened_blur.png);
    background-size: cover;
    background-attachment: fixed;
    background-position: 0% 50%;

    padding-top: 3em;
    padding-bottom: 3em;
    font-family: 'Muli', sans-serif;
}
.content-quote {
    width: 60%;
    min-width: 200px;
    margin-left: auto;
    color: white;
}
.content-quote::before {
    content: "“";
    position: absolute;
    font-size: 30em;
    line-height: 0.9em;
    margin-top: -70px;
    margin-left: -70px;
    z-index: 0;
    color: rgba(255,255,255,0.3);
    pointer-events: none;
}
.content-quote .author {
    margin-left: 3em;
    margin-top: 1em;
    display: block;
}
.content-pane-2 {
    background-image: url(car_bg_darkened_blur.png);
    background-size: cover;
    background-attachment: fixed;
    background-position: 0% 50%;
    position: relative;
}
.content-pane-2 .main-image {
    content: url("car_detail.jpg");
    width: 100%;
}
.content-pane-2 .intro-texts {
    position: absolute;
    padding: 0.4em;
}
.content-pane-2 .intro-texts h1 {
    margin: 0;
    font-size: 1.6em;
    line-height: 0.9em;
    margin-top: 0.1em;
}
.content-pane-2 .intro-texts h3 {
    margin: 0;
    font-size: 0.8em;
    font-family: 'Teko', sans-serif;
}
.hotspot {
    /* FIX THE POSITION RESPONSIVITY */
    font-size: 3em;
    color: #00d8ff;
    text-shadow: 0px 0px 10px #007eff;
    position: absolute;
    cursor: pointer;
    animation-name: spin;
    animation-duration: 10s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    line-height: 0.5em;
}
.hover-tooltip {
    opacity: 0;
    position: fixed;
    white-space: nowrap;
    z-index: 99999999999999;
    color: black;
    background-color: rgba(0,216,255,0.9);
    box-shadow: 0px 0px 10px rgba(0,126,255,0.5);
    padding: 0.2em;
    font-size: 0.8em;
    font-weight: bold;
    box-sizing: border-box;
    font-family: 'Muli', sans-serif;
    display: none;
    pointer-events: none;
}
.hover-tooltip h1 {
    font-size: 1em;
    font-family: 'Muli', sans-serif;
    font-weight: bold;
    margin: 0;
}
.hover-tooltip .tooltip-info {
    white-space:normal;
    width: auto;
    width: 200px;
    font-weight: normal;
    font-size: 0.9em;
    font-style: italic;
}
.mobile-tooltip {
    background-color: rgba(0,216,255,1);
    margin: 0;
    overflow: hidden;
    color: black;
    padding: 1em;
    height: 7em;
}
.mobile-tooltip .intro {
    color: black;
    text-align: center;

}
.mobile-tooltip .intro h3 {
    font-size: 1.5em;
    margin-top: 1em;
    margin-bottom: 0.5em;
}
.mobile-tooltip .intro h5 {
    font-size: 1em;
    font-family: 'Muli', sans-serif;
    margin: 0;
}
.mobile-tooltip h1 {
    font-size: 1em;
    font-family: 'Muli', sans-serif;
    font-weight: bold;
    margin: 0;

    display: none; /* To be overridden by JS */
}
.mobile-tooltip .mobile-tooltip-info {
    white-space:normal;
    width: auto;
    font-weight: normal;
    font-size: 0.9em;
    font-style: italic;
    font-family: 'Muli', sans-serif;

    display: none; /* To be overridden by JS */
}
.road-promo {
    min-height: 100%;
    background-image: url(road-promo-dark.jpg);
    background-size: cover;
    background-attachment: fixed;
}

.road-promo-roadmap {
    font-size: 6em;
}

.road-promo-hex {
    color: #00d8ff;
    text-shadow: 0px 0px 10px #00d8ff; /* #007eff */
}

.road-promo-bar {
    background-color: #00d8ff;
    box-shadow: 0px 0px 10px #00d8ff;
    width: 0.1em;
}

.road-promo-section-1 {
    height: 600px;
}

.road-promo-section-1 .text {
    font-size: 0.5em;
    position: absolute;
    margin-left: calc(10% + 1em);
    width: calc(90% - 1em);
    text-align: center;
    height: 600px;
    padding-top: 150px;
}

.road-promo-section-1 .text h2 {
    margin-bottom: 0px;
    line-height: 0.9em;
}

.road-promo-section-1 .text h6 {
font-size: 0.5em;
margin-top: 0px;
}

.road-promo-section-1-bar-1 {
    margin-left: calc(10% + 0.5em - 0.152em);
    height: 100%;
}

.road-promo-section {
    background-attachment: fixed;
    background-size: cover;
    overflow:hidden;
    position:relative;
}

.section-2 {
    background-image: url(cpu_bg_dark.jpg);
}

.section-3 {
    background-image: url(graph_dark.png);
    /* Image from https://unsplash.com/photos/ZzOa5G8hSPI */
}

.section-4 {
    background-image: url(ai_dark.jpg);
    /* https://pixabay.com/illustrations/processor-cpu-computer-chip-board-2217771/ */
}

.road-promo-hex {
    margin-left: 10%;
    margin-top: -0.8em;
}

.road-promo-section .bar-1 {
    margin-left: calc(10% + 0.5em - 0.152em);
    height: 1em;
}

.road-promo-section .bar-2 {
    margin-left: calc(10% + 0.5em - 0.152em);
    height: 100%;
    position: absolute;
    top: 1.2em;
}

.section-title {
    font-size: 0.5em;
    font-family: 'Teko', sans-serif;
    padding-bottom: 0.5em;
    position: relative;
    top: -0.4em;
    text-shadow: 0px 0px 10px #007eff;
}

.section-icon-wrapper {
    position: relative;
}

.section-icon {
    color: black;
    text-shadow: none;
    position: absolute;
    font-size: 0.3em;
    left: calc(10% + 0.8em);
    text-align: center;
    left: 0;
    top: 0px;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.section-description {
    text-shadow: 0px 0px 10px #007eff;
    font-size: 0.25em;
    font-family: 'Muli', sans-serif;
    padding-left: 4.2em;
    width: auto;
    padding-right: 1em;
    padding-bottom: 3em;
}
/*
.hotspot-1 {
    left: 41.7%;
    top: 41.2%;
}
.hotspot-2 {
    left: 63%;
    top: 57.8%;
}
.hotspot-3 {
    left: 36%;
    top: 31%;
}
.hotspot-4 {
    left: 79.5%;
    top: 64%;
}
.hotspot-5 {
    left: 22%;
    top: 63%;
}
*/
@media (min-width: 467px) {
    .mobile-tooltip {
        display: none !important;
    }
}
@media (max-width: 466px) {
    /*
    .hotspot-1 {
        left: 38.7%;
        top: 39.2%;
    }
    .hotspot-2 {
        left: 61%;
        top: 53.8%;
    }
    .hotspot-3 {
        left: 34%;
        top: 28%;
    }
    .hotspot-4 {
        left: 76.5%;
        top: 62%;
    }
    .hotspot-5 {
        left: 20%;
        top: 61%;
    }*/
    .hover-tooltip {
        pointer-events: none;
        display: none !important;
    }
    .mobile-tooltip {
        display: block;
    }
    .content-pane-2 .intro-texts {
        display: none;
    }
    .centered-title .logo-hero {
        width: 70%;
        margin: 0 auto;
        margin-left: 15%;
        margin-right: 15%;
    }
}

html, body {
    height: calc(100% - 1.5em);
}
body {
    background-image: url(car_bg_darkened.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-position: 0% 50%;
}
@media (prefers-color-scheme: dark) {
    .content-pane-2 .main-image {
        content: url("car_detail_dark.jpg");
        /* Maybe cut out this image? */
    }

}

